# videochat

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Justfile  README.md  askama.toml  tsconfig.json
resources/static/: old.js  tsconfig.tsbuildinfo  types.js
resources/templates/: index.html
resources/ts/: session.ts  types.ts
src/: handlers.rs  lib.rs  main.rs  service.rs  util.rs
templates/: index.html
