[package]
name = "meet"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.87"
askama = { version = "0.12.1", features = ["serde", "with-axum"] }
askama_axum = { version = "0.4.0", features = ["serde-json"] }
axum = { version = "0.7.5", features = ["ws", "tracing"] }
axum-extra = { version = "0.9.4", features = ["typed-header"] }
axum-server = { version = "0.7.1", features = ["tls-rustls"] }
base64 = "0.22.1"
futures = "0.3.30"
futures-util = { version = "0.3.30", features = ["sink", "std"] }
lazy_static = "1.5.0"
rustls = { version = "0.23.13", features = ["ring"] }
serde = "1.0.208"
serde_json = "1.0.125"
strum = "0.26.3"
strum_macros = "0.26.4"
thiserror = "1.0.63"
tokio = { version = "1.39.3", features = ["full"] }
tower-http = { version = "0.6.0", features = ["trace", "fs"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
webrtc = "0.11.0"
